--- a/ProgressiveScroll/ProgressiveScroll.csproj
+++ b/ProgressiveScroll/ProgressiveScroll.csproj
@@ -68,7 +68,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MarkerRenderer.cs" />
+    <Compile Include="ChangeRenderer.cs" />
     <Compile Include="ColorSet.cs" />
+    <Compile Include="HighlightRenderer.cs" />
     <Compile Include="HighlightWordTag.cs" />
     <Compile Include="HighlightWordTaggerProvider.cs" />
     <Compile Include="ProgressiveScroll.cs" />
@@ -76,6 +79,7 @@
     <Compile Include="ProgressiveScrollFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleScrollBar.cs" />
+    <Compile Include="TextRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
