--- a/ProgressiveScroll/ProgressiveScroll.csproj
+++ b/ProgressiveScroll/ProgressiveScroll.csproj
@@ -100,6 +100,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HighlightWordCommand.cs" />
+    <Compile Include="HighlightWordTagger.cs" />
     <Compile Include="MarkerRenderer.cs" />
     <Compile Include="ChangeRenderer.cs" />
     <Compile Include="ColorSet.cs" />
@@ -107,8 +109,7 @@
     <Compile Include="HighlightWordTag.cs" />
     <Compile Include="HighlightWordTaggerProvider.cs" />
     <Compile Include="ProgressiveScroll.cs" />
-    <Compile Include="ProgressiveScrollOptions.cs" />
-    <Compile Include="ProgressiveScrollView.cs" />
+    <Compile Include="OptionsPage.cs" />
     <Compile Include="ProgressiveScrollFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleScrollBar.cs" />
