--- a/ProgressiveScroll/ProgressiveScroll_vs2012.csproj
+++ b/ProgressiveScroll/ProgressiveScroll_vs2012.csproj
@@ -108,15 +108,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HighlightWordCommand.cs" />
+    <Compile Include="HighlightWordTagger.cs" />
     <Compile Include="MarkerRenderer.cs" />
     <Compile Include="ChangeRenderer.cs" />
     <Compile Include="ColorSet.cs" />
     <Compile Include="HighlightRenderer.cs" />
     <Compile Include="HighlightWordTag.cs" />
     <Compile Include="HighlightWordTaggerProvider.cs" />
+    <Compile Include="OptionsPage.cs" />
     <Compile Include="ProgressiveScroll.cs" />
-    <Compile Include="ProgressiveScrollOptions.cs" />
-    <Compile Include="ProgressiveScrollView.cs" />
     <Compile Include="ProgressiveScrollFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleScrollBar.cs" />
